# mlp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  package-win.ps1
.github/workflows/: ci.yml
scripts/: package-macos.sh  package-win.ps1
src/: libav.rs  main.rs  parser.rs
src/libav/: av_codec_context.rs  av_error.rs  av_format_context.rs  av_frame.rs  av_log.rs  av_packet.rs  av_resample.rs  demux.rs  dsp.rs  mod.rs  truehd.rs
src/mlp/: mlp_frame_reader.rs  mlp_iterator.rs  mlp_parser.rs  mod.rs
