[package]
name = "mlp"
version = "0.1.0"
authors = ["Dominik Mydlil <dominik.mydlil@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
crc = "1.8.1"
itertools = "0.9.0"
clap = "3.0.0-beta.1"
num-format = "0.4.0"
